--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "Marie-2.0 English",
-  "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
+  "name": "Group Manager",
+  "description": "Telegram's easiest group manager. Modular Telegram group management bot!",
   "keywords": [
     "telegram",
     "best",
@@ -49,11 +49,7 @@
     },
     "WHITELIST_USERS": {
       "description": "A space separated list of user_ids which should be considered whitelisted - they can't be banned.",
-      "value": "254318997 683538773 570400686 466337795"
-    },
-    "DONATION_LINK": {
-      "description": "Optional: link where you would like to receive donations.",
-      "value": "https://www.paypal.me/Your_id_here"
+      "value": "1201641732 1318486004 1180558535 1203294851"
     },
     "PORT": {
       "description": "Port to use for your webhooks",
